# gridmind

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  STANDARDS.md  docker-compose.yml  start-next.cmd
.claude/: launch.json  settings.local.json
docs/: agent-catalog.md  api-reference.md  architecture.md  vigil-report.md
gridmind-site/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts
migrations/: 001_tenants.sql  002_users_and_roles.sql  004_agents.sql  (+11 more)
scripts/blog-bot/: Dockerfile  agents.py  image.py  main.py  publisher.py  pyproject.toml
services/cli/: pyproject.toml
services/cli/gridmind_cli/: __init__.py  api_client.py  config.py  formatters.py  main.py
services/cli/gridmind_cli/commands/: __init__.py  auth.py  cost.py  deploy.py  logs.py  status.py  teams.py
services/cli/tests/: conftest.py  test_auth.py  test_cost.py  test_deploy.py  test_status.py
services/cortex/: Dockerfile  pyproject.toml
services/cortex/agents/: __init__.py  aegis.py  argus.py  comptroller.py  convoy.py  forge_agent.py  gremlin.py  harbor.py  herald.py  ledger.py  medic.py  oracle.py  phoenix.py  prism_agent.py  pulse.py  registry.py  scribe.py  sentinel.py  sherlock.py  steward.py  thrift.py  titan.py  triage.py  tuner.py  vault_agent.py  vitals.py
services/cortex/cortex/: __init__.py  __main__.py  approval.py  audit.py  base_agent.py  config.py  event_mesh.py  llm.py  models.py  runtime.py  state.py
services/cortex/cortex/connectors/: __init__.py  autogen.py  base.py  claude_code.py  crewai.py  langchain.py  nullclaw.py  registry.py  team_config.py
services/cortex/tests/: __init__.py  conftest.py  test_approval.py  test_audit.py  test_base_agent.py  test_event_mesh.py  test_llm.py  test_runtime.py  test_state.py
services/cortex/tests/agents/: __init__.py  test_aegis.py  test_argus.py  test_comptroller.py  test_convoy.py  test_forge.py  test_gremlin.py  test_harbor.py  test_herald.py  test_ledger.py  test_medic.py  test_oracle.py  test_phoenix.py  test_prism.py  test_pulse.py  test_scribe.py  test_sentinel.py  test_sherlock.py  test_steward.py  test_thrift.py  test_titan.py  test_triage.py  test_tuner.py  test_vault.py  test_vitals.py
shared/: __init__.py  pyproject.toml
shared/config/: __init__.py  settings.py
shared/models/: __init__.py  agent.py  approval.py  audit.py  base.py  billing.py  communication.py  cost.py  deployment.py  incident.py  membership.py  tenant.py  user.py  waitlist.py
shared/schemas/: __init__.py  events.py
(+351 files in other folders)
